fix bug
1- Some of the data in map view (i compared transactions numbers and values) differs from what is in the top destinations chart on snapshot view. For example, US has 72 transactions in Snapshot but 77 in Map View. France has 53 transactions and 1.53m in map view but on snapshot view only 1.25m and not showing on top 6 destinations even through UK is there with 52 (less than France). The data should be identical on both views/reading from same calculation for number/value/avg fees/etc.
2- For the time series chart, on the x-axis we see the days 1,2,3,4, etc. but we dont know for what month or period they correspond to, so maybe we can write 1 Sept, 3 Sept, 5 Sept or something similar
3- For the time series chart, the values on 30th are showing zero in all charts. Can you please double check that this is in fact correct in the source file and not a glitch?
4- For the filters, it is correctly showing All/Multiple/Chosen value but the box is too small to read the label (see screenshot) if possible to make them all a bit wider horizontally to see the values
5- When you change the date range, the KPI box for number of transactions changes correctly but for total value stays the same (for the entire range rather than one month) and makes the other numbers (avg transaction value etc.) wrong

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -94,18 +94,6 @@
   width: 220px;
 }
 
-@media screen and (min-width: 1536px) {
-  .sidenav {
-    width: 300px !important; /* !important to override inline styles */
-  }
-}
-
 .example-button-container {
   width: 190px;
-}
-
-@media screen and (min-width: 1536px) {
-  .example-button-container {
-    width: 268px !important; /* !important to override inline styles */
-  }
 }
